--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,79 +3,161 @@
 {% block body %}
 <div class="row">
 
-{#Debut Slideshow #}
-<div id="myCarousel" class="row carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-    <li data-target="#myCarousel" data-slide-to="3"></li>
-  </ol>
+    {#-------------------UTILISTAEUR CONNECTE--------------------------------#}
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img class="img-responsive center-block" src="{{ asset('image/londres.jpeg') }}" alt="Londres">
-    </div>
-
-    <div class="item">
-      <img class="img-responsive center-block" src="{{ asset('image/paris.jpg') }}" alt="Paris">
-    </div>
-
-    <div class="item">
-      <img class="img-responsive center-block" src="{{ asset('image/Berlin.jpg') }}" alt="Berlin">
-    </div>
-
-    <div class="item">
-      <img class="img-responsive center-block" src="{{ asset('image/newyork.jpg') }}" alt="NewYork"Ò>
-      </div>
-  </div>
-  <div class="carousel-caption">
     {% if app.security.token is not null and is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-        <h4>Welcome {{  app.user.username }}</h4>
+
+
+        {#____________________________Carousel___________________________________#}
+      <div id="myCarousel" class="row carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img class="img-responsive center-block" src="{{ asset('image/londres.jpeg') }}" alt="Londres">
+          </div>
+
+          <div class="item">
+            <img class="img-responsive center-block" src="{{ asset('image/paris.jpg') }}" alt="Paris">
+          </div>
+
+          <div class="item">
+            <img class="img-responsive center-block" src="{{ asset('image/Berlin.jpg') }}" alt="Berlin">
+          </div>
+
+          <div class="item">
+            <img class="img-responsive center-block" src="{{ asset('image/newyork.jpg') }}" alt="NewYork"Ò>
+            </div>
+            <div>
+              <a class="more-scroll" href="#PageAccueilLogge">"Découvrir de nouveau horizons?!"
+              </a>
+            </div>
+        </div>
+        <div class="carousel-caption">
+          <h4>Bonjour {{  app.user.username }}</h4>
+          <h4>Où voulez vous parler aujourd'hui?</h4>
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Partir en...">
+              <span class="input-group-btn">
+                  <button class="btn btn-default" type="button">Go!</button>
+              </span>
+          </div>
+          <p>"pratiquez comme si vous y étiez"</p>
+        </div>
+      </div>
+
+      <div id="BodyPageAcceuilLogge" class="row">
+        {#*** Pour chaque langues de l'utilisateur connecté ***#}
+        {% for %}
+          <div class="col-md-2">
+            {#**** Pour chaque Pays de langues précédent****#}
+            {% for %}
+              <a href="#" class="thumbnail">
+                <img src="..." alt="...">
+              </a>
+            {% endfor %}
+          </div>
+        {% endfor %}
+
+      </div>
+
+
+    {#-------------------UTILISTAEUR NON CONNECTE----------------------------#}
+
     {% else %}
-        <a class="btn btn-default btn-edu" href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
-        <a class="btn btn-default btn-edu-invert" href="{{ path('fos_user_registration_register') }}" role="button">Register</a>
-    {% endif %}
-    <p>pratiquez comme si vous y étiez</p>
-  </div>
-  <div>
-    <a class="more-scroll" href="#PageAccueil">"Découvrir SpeakIt!"
-    </a>
-  </div>
-</div>
 
-{#Fin Slideshow#}
+    {#____________________________Carousel___________________________________#}
+  <div id="myCarousel" class="row carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
 
-<div id="PageAccueil" class="row welcome-panel">
-</div>
-<div class="row">
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img class="img-responsive center-block" src="{{ asset('image/londres.jpeg') }}" alt="Londres">
+      </div>
+
+      <div class="item">
+        <img class="img-responsive center-block" src="{{ asset('image/paris.jpg') }}" alt="Paris">
+      </div>
+
+      <div class="item">
+        <img class="img-responsive center-block" src="{{ asset('image/Berlin.jpg') }}" alt="Berlin">
+      </div>
+
+      <div class="item">
+        <img class="img-responsive center-block" src="{{ asset('image/newyork.jpg') }}" alt="NewYork"Ò>
+        </div>
+        <div>
+          <a class="more-scroll" href="#PageAccueil">"Découvrir SpeakIt!"
+          </a>
+        </div>
+    </div>
+    <div class="carousel-caption">
+          <a class="btn btn-default btn-edu" href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+          <a class="btn btn-default btn-edu-invert" href="{{ path('fos_user_registration_register') }}" role="button">Register</a>
+
+      <p>pratiquez comme si vous y étiez</p>
+    </div>
+  </div>
+
+  {#_________________________Presentation SpeakIt!___________________________#}
+
+  <div id="PageAccueil" class="row welcome-panel">
     <div class="col-md-12 home-row">
         <h2>Une nouvelle façon d'apprendre</h2>
     </div>
-    <div class="col-md-12 home-row">
-        <div class="col-md-6">
-            <div class="col-md-6">
+    <div class="col-md-12">
+        <div class="col-md-3">
                 <i class="fa fa-keyboard-o fa-5x"></i>
                 <h4>Partager</h4>
-            </div>
-            <div class="col-md-6">
-                <p class="edu-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            </div>
         </div>
-        <div class="col-md-6">
-            <div class="col-md-6">
+        <div class="col-md-3">
                 <i class="fa fa-microphone fa-5x"></i>
                 <h4>Rencontrer</h4>
-            </div>
-            <div class="col-md-6">
-                <p class="edu-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            </div>
+        </div>
+        <div class="col-md-3">
+                <i class="fa fa-microphone fa-5x"></i>
+                <h4>Rencontrer</h4>
+        </div>
+        <div class="col-md-3">
+                <i class="fa fa-microphone fa-5x"></i>
+                <h4>Rencontrer</h4>
         </div>
     </div>
+
+    <div class="col-md-12">
+        <div class="col-md-3">
+                <p class="edu-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="col-md-3">
+                <p class="edu-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            </div>
+        <div class="col-md-3">
+                <p class="edu-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div>
+        <div class="col-md-3">
+                <p class="edu-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div>
+    </div>
+
+  </div>
+  {% endif %}
+
 </div>
-</div>
+
 {% endblock %}
 
 {% block stylesheets %}
